[project]
name = "geobuffers"
description = "geobuffers package"
version = "0.1"
authors = [
    { name = "Mikolaj Czerkawski", email = "mczerkawski96@gmail.com" }
]
dependencies = [
    "shapely",
    "pyproj"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
